--- a/src/Cap02/Capitulo2.tex
+++ b/src/Cap02/Capitulo2.tex
@@ -830,7 +830,7 @@ e contanto que não seja singular pode ser facilmente invertida. Desse modo, se
 quisermos por exemplo, gerar um movimento retilíneo no efetuador final paralelo
 ao eixo \(x\) do plano \(xy\) com velocidade constante, basta tomar \(\xi = \begin{bmatrix}
     v_x & 0 & 0
-\end{bmatrix}^\top\) com \(0 < v_x \ll 1\).
+\end{bmatrix}^\top\).
 
 \section{Manipuladores redundantes}
 
