--- a/src/Identificacao.tex
+++ b/src/Identificacao.tex
@@ -17,10 +17,10 @@
 \tituloCoorientador{} %% Título, Instituição
 
 \memberA{Ícaro Bezerra Queiroz de Araújo} %% Nome
-\filiationA{Dr., UFAL} %% Titulo, Instituição
+\filiationA{Prof.\ Dr., UFAL} %% Titulo, Instituição
 
 \memberB{Arthur Costa Vangasse} %% Nome
-\filiationB{Eng., UFMG} %% Titulo, Instituição
+\filiationB{Msc., UFMG} %% Titulo, Instituição
 
 \memberC{} %% Nome
 \filiationC{} %% Titulo, Instituição
@@ -34,8 +34,8 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\setDate{24}
-\setMonth{Maio}
+\setDate{23}
+\setMonth{Julho}
 \setYear{2024}
 \setLocation{Maceió, Alagoas}
 
