--- a/src/Cap02/Capitulo2.tex
+++ b/src/Cap02/Capitulo2.tex
@@ -645,9 +645,9 @@ onde a i-ésima coluna \(J_{\omega_i}\) é dada por:
 \end{equation}
 
 Note que o cálculo da jacobiana torna-se possível apenas com o conhecimento da
-função de cinemática direta \(T_n^0\) mostrando-se uma maneira simples e
-sistemática para calcular não so a velocidade do efetuador final mas também a
-velocidade de qualquer ponto da estrutura cinemática do manipulador.
+função de cinemática direta \(T_n^0\) mostrando-se uma maneira eficiente para calcular 
+não so a velocidade do efetuador final mas também a velocidade de qualquer ponto da 
+estrutura cinemática do manipulador.
 
 Como exemplo, considere o manipulador planar 3R introduzido na seção anterior.
 Com base no procedimento descrito acima, a jacobiana do manipulador é dada por:
@@ -797,8 +797,8 @@ amostragem).
 O esquema de controle descrito acima é conhecido como \emph{resolved rate
     control}, o qual consegue de maneira simples e elegante o solucionar o problema
 de gerar movimentos no efetuador final de velocidade constante sem recorrer à
-soluções numéricas ou analíticas para o cálculo da cinemática inversa. Tal
-esquema é útil na geração de trajetórias retilíneas no espaço de trabalho,
+soluções numéricas ou analíticas para o cálculo da cinemática inversa~\cite{corke_robotics_2023}. 
+Tal esquema é útil na geração de trajetórias retilíneas no espaço de trabalho,
 conhecidas como trajetórias cartesianas, uma vez que a componente translacional
 da velocidade do efetuador final tem direção constante ao longo de todo o
 trajeto pode ser tratada de maneira independente da componente rotacional.
@@ -853,9 +853,15 @@ singularidades e limites mecânicos das juntas.
 Num manipulador cinematicamente redundante, a matriz jacobiana de dimensão \(m
 \times n\) será retangular (\(m < n\)). Isso significa que \(J\) possui mais
 colunas do que linhas e nesse caso existem infinitas soluções para o problema
-de cinemática inversa diferencial. Uma solução possível nesse caso é tratar o
-problema como um de otimização, onde buscamos uma solução que minimize por
-exemplo \(||\dot{q}||^2\). Pode ser mostrado que tal solução é dada por:
+de cinemática inversa diferencial. Uma solução viável é formular o problema como 
+um de otimização linear com restrições, onde a solução ótima é obtida minimizando 
+o custo quadrático das velocidades das juntas~\cite{siciliano_robotics_2009}:
+
+\begin{equation}
+    \min_{\dot{q}} \left\Vert \dot{q} \right\Vert^2 \text{ sujeito a } J \dot{q} = \xi
+\end{equation}
+
+Pode ser mostrado que nesse caso, a solução ótima é dada por:
 
 \begin{equation}\label{eq:pseudo-inverse}
     \dot{q} = J^\dag \xi + (I_n - J^\dag J) \dot{q_0}
@@ -979,7 +985,7 @@ onde \(k_0 > 0\) é uma constante positiva que determina o tamanho do passo.
 Uma escolha natural para o índice de performance \(w\) é a \emph{medida de
     manipulabilidade de Yoshikawa}:
 
-\begin{equation}
+\begin{equation}\label{eq:yoshikawa}
     w(q) = \sqrt{\det(J(q){J(q)}^\top)}
 \end{equation}
 
@@ -987,9 +993,7 @@ onde vale ressaltar que é equivalente àquela definida na a equação
 (\ref{eq:manipulability}) uma vez que se \(\lambda_i\) são os autovalores de
 \(J J^\top\) então \(\sigma_i = \sqrt{\lambda_i}\).
 
-Apesar do cálculo da manipulabilidade ser relativamente simples, o mesmo não se
-pode dizer para o cálculo do seu gradiente devido à complexidade das expressões
-envolvidas. Uma alternativa é utilizar uma métrica mais simples como a
+Uma alternativa ao cálculo da \ref{eq:yoshikawa} é utilizar uma métrica mais simples como a
 \emph{distância para os limites mecânicos das juntas} dada por:
 
 \begin{equation}
@@ -1006,10 +1010,11 @@ de maneira analítica onde cada coordenada é dada por:
 \end{equation}
 
 Outro ponto a salientar é que a escolha do tamanho do passo \(k_0\) é crucial
-para a performance do algoritmo. Se \(k_0\) for muito pequeno o processo de
-otimização pode se tornar muito lento, enquanto que se \(k_0\) for muito grande
-isso pode levar até mesmo uma diminuição ou até mesmo não convergência do valor
-de \(w\) devido a oscilações em torno do ponto de máximo local.
+para a performance do algoritmo~\cite{siciliano_springer_2008}. Se \(k_0\) 
+for muito pequeno o processo de otimização pode se tornar muito lento, enquanto 
+que se \(k_0\) for muito grande isso pode a uma diminuição ou até
+ mesmo não convergência do valor de \(w\) devido a oscilações em torno do ponto 
+ de máximo local.
 
 No próximo capítulo, iremos aplicar os conceitos apresentados até agora na
 conecepção de um ambiente simulado para um manipulador redundante com cinco
