--- a/src/Ref/SampleReferences.bib
+++ b/src/Ref/SampleReferences.bib
@@ -1,18 +1,47 @@
 %%%%%%%%%%%% References %%%%%%%%%%%%%%%%%%%%%%%
 
-@book{corke_robotics_2023,
-  address    = {Cham},
-  edition    = {3rd ed., 2023},
-  title      = {Robotics, vision and control: fundamental algorithms in {Python}},
-  isbn       = {978-3-031-06469-2},
-  shorttitle = {Robotics, vision and control},
-  abstract   = {This textbook provides a comprehensive, but tutorial, introduction to robotics, computer vision, and control. It is written in a light but informative conversational style, weaving text, figures, mathematics, and lines of code into a narrative that covers robotics and computer visionseparately, and together as robotic vision. Over 1600 code examples show how complex problems can be decomposed and solved using just a few simple lines of code. This edition is based on Python and is accompanied by fully open-source Python-based Toolboxes for robotics and machine vision. The new Toolboxes enable the reader to easily bring the algorithmic concepts into practice and work with real, non-trivial, problems on a broad range of computing platforms. For the beginning student the book makes the algorithms accessible, the Toolbox code can be read to gain understanding, and the examples illustrate how it can be used. The code can also be the starting point for new work, for practitioners, students, or researchers, by writing programs based on Toolbox functions, or modifying the Toolbox code itself},
-  language   = {eng},
-  publisher  = {Springer},
-  author     = {Corke, Peter I.},
-  year       = {2023},
-  note       = {OCLC: 1378937773},
-  file       = {(Springer Tracts in Advanced Robotics) Peter Corke - Robotics, Vision and Control_ Fundamental Algorithms in Python, 3rd Edition. 146-Springer (2023).pdf:/home/hgtllys/Zotero/storage/595QB2CK/(Springer Tracts in Advanced Robotics) Peter Corke - Robotics, Vision and Control_ Fundamental Algorithms in Python, 3rd Edition. 146-Springer (2023).pdf:application/pdf}
+%%% Chapter 01 %%%
+
+@inproceedings{li2023pseudo,
+  title        = {A Pseudo-Inverse Redundancy-Based Resolution Scheme at the Acceleration Level to Control Robotic Arm Motion},
+  author       = {Li, Qu and Cang, Naimeng and Zhang, Weidong and Guo, Dongsheng and Zhang, Canwei},
+  booktitle    = {2023 6th International Conference on Robotics, Control and Automation Engineering (RCAE)},
+  pages        = {18--22},
+  year         = {2023},
+  organization = {IEEE}
+}
+
+@inproceedings{kuri2023som,
+  title        = {SOM Network with Weighted Least Norm Matrix Based Redundancy Resolution for a 5-DOF Spatial Robotic Manipulator},
+  author       = {Kuri, Saumitra Kumar and Halder, Kaushik and Orlando, M Felix},
+  booktitle    = {2023 7th International Conference on Computer Applications in Electrical Engineering-Recent Advances (CERA)},
+  pages        = {1--6},
+  year         = {2023},
+  organization = {IEEE}
+}
+
+@inproceedings{hammond2011configuring,
+  title        = {Configuring kinematically redundant robotic manipulators to increase effective task-specific motion resolution},
+  author       = {Hammond, Frank L},
+  booktitle    = {2011 IEEE International Conference on Mechatronics and Automation},
+  pages        = {34--39},
+  year         = {2011},
+  organization = {IEEE}
+}
+
+%%% Chapter 02 %%%
+
+@book{spong_robot_2020,
+  address   = {Hoboken, NJ},
+  edition   = {Second edition},
+  title     = {Robot modeling and control},
+  isbn      = {978-1-119-52404-5 978-1-119-52399-4},
+  abstract  = {"A New Edition Featuring Case Studies and Examples of the Fundamentals of Robot Kinematics, Dynamics, and Control. In the 2nd Edition of Robot Modeling and Control, students will cover the theoretical fundamentals and the latest technological advances in robot kinematics. With so much advancement in technology, from robotics to motion planning, society can implement more powerful and dynamic algorithms than ever before. This in-depth reference guide educates readers in four distinct parts; the first two serve as a guide to the fundamentals of robotics and motion control, while the last two dive more in-depth into control theory and nonlinear system analysis. With the new edition, readers gain access to new case studies and thoroughly researched information covering topics such as: Motion-planning, collision avoidance, trajectory optimization, and control of robots. Popular topics within the robotics industry and how they apply to various technologies. An expanded set of examples, simulations, problems, and case studies. Open-ended suggestions for students to apply the knowledge to real-life situations. A four-part reference essential for both undergraduate and graduate students, Robot Modeling and Control serves as a foundation for a solid education in robotics and motion planning"--},
+  language  = {eng},
+  publisher = {Wiley},
+  author    = {Spong, Mark W. and Hutchinson, Seth and Vidyasagar, Mathukumalli},
+  year      = {2020},
+  file      = {Mark W. Spong, Seth Hutchinson, M. Vidyasagar - Robot Modeling and Control.pdf:/home/hgtllys/Zotero/storage/V29Y4ILQ/Mark W. Spong, Seth Hutchinson, M. Vidyasagar - Robot Modeling and Control.pdf:application/pdf}
 }
 
 @book{siciliano_robotics_2009,
@@ -27,6 +56,21 @@
   note       = {OCLC: ocn144222188},
   keywords   = {Robots, Control systems, Manipulators (Mechanism), Motion},
   file       = {Siciliano - 2009 - Robotics modelling, planning and control.pdf:/home/hgtllys/Zotero/storage/AFUASD9N/Siciliano - 2009 - Robotics modelling, planning and control.pdf:application/pdf}
+}
+
+@book{corke_robotics_2023,
+  address    = {Cham},
+  edition    = {3rd ed., 2023},
+  title      = {Robotics, vision and control: fundamental algorithms in {Python}},
+  isbn       = {978-3-031-06469-2},
+  shorttitle = {Robotics, vision and control},
+  abstract   = {This textbook provides a comprehensive, but tutorial, introduction to robotics, computer vision, and control. It is written in a light but informative conversational style, weaving text, figures, mathematics, and lines of code into a narrative that covers robotics and computer visionseparately, and together as robotic vision. Over 1600 code examples show how complex problems can be decomposed and solved using just a few simple lines of code. This edition is based on Python and is accompanied by fully open-source Python-based Toolboxes for robotics and machine vision. The new Toolboxes enable the reader to easily bring the algorithmic concepts into practice and work with real, non-trivial, problems on a broad range of computing platforms. For the beginning student the book makes the algorithms accessible, the Toolbox code can be read to gain understanding, and the examples illustrate how it can be used. The code can also be the starting point for new work, for practitioners, students, or researchers, by writing programs based on Toolbox functions, or modifying the Toolbox code itself},
+  language   = {eng},
+  publisher  = {Springer},
+  author     = {Corke, Peter I.},
+  year       = {2023},
+  note       = {OCLC: 1378937773},
+  file       = {(Springer Tracts in Advanced Robotics) Peter Corke - Robotics, Vision and Control_ Fundamental Algorithms in Python, 3rd Edition. 146-Springer (2023).pdf:/home/hgtllys/Zotero/storage/595QB2CK/(Springer Tracts in Advanced Robotics) Peter Corke - Robotics, Vision and Control_ Fundamental Algorithms in Python, 3rd Edition. 146-Springer (2023).pdf:application/pdf}
 }
 
 @book{siciliano_springer_2008,
@@ -44,30 +88,18 @@
   file      = {Full Text PDF:/home/hgtllys/Zotero/storage/AVWWFIYD/Siciliano and Khatib - 2008 - Springer Handbook of Robotics.pdf:application/pdf}
 }
 
-@book{spong_robot_2020,
-  address   = {Hoboken, NJ},
-  edition   = {Second edition},
-  title     = {Robot modeling and control},
-  isbn      = {978-1-119-52404-5 978-1-119-52399-4},
-  abstract  = {"A New Edition Featuring Case Studies and Examples of the Fundamentals of Robot Kinematics, Dynamics, and Control. In the 2nd Edition of Robot Modeling and Control, students will cover the theoretical fundamentals and the latest technological advances in robot kinematics. With so much advancement in technology, from robotics to motion planning, society can implement more powerful and dynamic algorithms than ever before. This in-depth reference guide educates readers in four distinct parts; the first two serve as a guide to the fundamentals of robotics and motion control, while the last two dive more in-depth into control theory and nonlinear system analysis. With the new edition, readers gain access to new case studies and thoroughly researched information covering topics such as: Motion-planning, collision avoidance, trajectory optimization, and control of robots. Popular topics within the robotics industry and how they apply to various technologies. An expanded set of examples, simulations, problems, and case studies. Open-ended suggestions for students to apply the knowledge to real-life situations. A four-part reference essential for both undergraduate and graduate students, Robot Modeling and Control serves as a foundation for a solid education in robotics and motion planning"--},
-  language  = {eng},
-  publisher = {Wiley},
-  author    = {Spong, Mark W. and Hutchinson, Seth and Vidyasagar, Mathukumalli},
-  year      = {2020},
-  file      = {Mark W. Spong, Seth Hutchinson, M. Vidyasagar - Robot Modeling and Control.pdf:/home/hgtllys/Zotero/storage/V29Y4ILQ/Mark W. Spong, Seth Hutchinson, M. Vidyasagar - Robot Modeling and Control.pdf:application/pdf}
-}
+%%% Chapter 03 %%%
 
-@book{bassa_very_2023,
-  title     = {A very informal journey through {ROS} 2},
-  url       = {https://leanpub.next/averyinformaljourneythroughros2},
-  abstract  = {A ROS2 book in pdf format to learn the best practices used programming robots using ROS in an informal way. architectural patterns in robotics.},
-  language  = {eng},
-  urldate   = {2023-11-29},
-  publisher = {Leanpub},
-  author    = {Bassa, Marco Matteo},
-  month     = jan,
-  year      = {2023},
-  file      = {Bassa - 2023 - A very informal journey through ROS 2.pdf:/home/hgtllys/Zotero/storage/KUW6G86H/Bassa - 2023 - A very informal journey through ROS 2.pdf:application/pdf;Snapshot:/home/hgtllys/Zotero/storage/CRHETAEX/averyinformaljourneythroughros2.html:text/html}
+@article{robotic_applications,
+  author   = {Collins, Jack and Chand, Shelvin and Vanderkop, Anthony and Howard, David},
+  journal  = {IEEE Access},
+  title    = {A Review of Physics Simulators for Robotic Applications},
+  year     = {2021},
+  volume   = {9},
+  number   = {},
+  pages    = {51416-51431},
+  keywords = {Robots;Robot sensing systems;Mobile robots;Physics;Sensors;Legged locomotion;Navigation;Simulation;review;robotics;field robotics;soft robotics;aerial robotics;marine robotics;manipulation;robotic learning;surgical robotics},
+  doi      = {10.1109/ACCESS.2021.3068769}
 }
 
 @inproceedings{rtb,
@@ -91,16 +123,64 @@
   url     = {https://doi.org/10.5772/5618}
 }
 
-@article{robotic_applications,
-  author   = {Collins, Jack and Chand, Shelvin and Vanderkop, Anthony and Howard, David},
-  journal  = {IEEE Access},
-  title    = {A Review of Physics Simulators for Robotic Applications},
-  year     = {2021},
-  volume   = {9},
-  number   = {},
-  pages    = {51416-51431},
-  keywords = {Robots;Robot sensing systems;Mobile robots;Physics;Sensors;Legged locomotion;Navigation;Simulation;review;robotics;field robotics;soft robotics;aerial robotics;marine robotics;manipulation;robotic learning;surgical robotics},
-  doi      = {10.1109/ACCESS.2021.3068769}
-}
-
 %%%%%%%%%%%%%%%%%%%%%%%%% The End %%%%%%%%%%%%%%%%%%%%
+@book{bassa_very_2023,
+  title     = {A very informal journey through {ROS} 2},
+  url       = {https://leanpub.next/averyinformaljourneythroughros2},
+  abstract  = {A ROS2 book in pdf format to learn the best practices used programming robots using ROS in an informal way. architectural patterns in robotics.},
+  language  = {eng},
+  urldate   = {2023-11-29},
+  publisher = {Leanpub},
+  author    = {Bassa, Marco Matteo},
+  month     = jan,
+  year      = {2023},
+  file      = {Bassa - 2023 - A very informal journey through ROS 2.pdf:/home/hgtllys/Zotero/storage/KUW6G86H/Bassa - 2023 - A very informal journey through ROS 2.pdf:application/pdf;Snapshot:/home/hgtllys/Zotero/storage/CRHETAEX/averyinformaljourneythroughros2.html:text/html}
+} % cite in the text !!!
+
+@article{Ancona2017,
+  author    = {Roberto Ancona},
+  title     = {Redundancy modelling and resolution for robotic mobile manipulators: a general approach},
+  journal   = {Advanced Robotics},
+  volume    = {31},
+  number    = {13},
+  pages     = {706--715},
+  year      = {2017},
+  publisher = {Taylor \& Francis},
+  doi       = {10.1080/01691864.2017.1326842},
+  url       = {https://doi.org/10.1080/01691864.2017.1326842},
+  eprint    = {https://doi.org/10.1080/01691864.2017.1326842}
+} % cite in the text !!!
+
+@article{Nenchev1989,
+  author  = {Nenchev, Dragomir N.},
+  title   = {Redundancy resolution through local optimization: A review},
+  journal = {Journal of Robotic Systems},
+  volume  = {6},
+  number  = {6},
+  pages   = {769-798},
+  doi     = {https://doi.org/10.1002/rob.4620060607},
+  url     = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.4620060607},
+  eprint  = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/rob.4620060607},
+  year    = {1989}
+} % cite in the text !!!
+
+@article{Maaroof2022,
+  author         = {Maaroof, Omar W. and Dede, Mehmet İsmet Can and Aydin, Levent},
+  title          = {A Robot Arm Design Optimization Method by Using a Kinematic Redundancy Resolution Technique},
+  journal        = {Robotics},
+  volume         = {11},
+  year           = {2022},
+  number         = {1},
+  article-number = {1},
+  url            = {https://www.mdpi.com/2218-6581/11/1/1},
+  issn           = {2218-6581},
+  doi            = {10.3390/robotics11010001}
+} % cite in the text !!!
+
+@inproceedings{yoshikawa1983analysis,
+  title     = {Analysis and control of robot manipulators with redundancy},
+  author    = {Yoshikawa, Tsuneo},
+  booktitle = {Preprints of 1st Int. Symp. of Robotics Research, Boston, MA, 1983},
+  pages     = {735--747},
+  year      = {1983}
+} % cite in the text !!!
